# voice-assistant

./: .gitignore  Cargo.toml  memories.db-shm  memories.db-wal  stt_service.py
.cargo/: config.toml
all-smi/: Cargo.toml  build.rs
all-smi/debian/: README.packaging  changelog  control  control.source  rules  rules.launchpad-simple
all-smi/docs/man/: all-smi.1
all-smi/src/: cli.rs  cli_config.rs  client.rs  lib.rs  main.rs
all-smi/src/api/: server.rs
all-smi/src/common/: config.rs  config_apply.rs  config_env.rs  config_file.rs  config_file_tests.rs  mod.rs  paths.rs
all-smi/src/config_cmd/: example.rs  mod.rs  render.rs
all-smi/src/device/: cpu_linux.rs  cpu_macos.rs  memory_linux.rs  platform_detection.rs  traits.rs  types.rs
all-smi/src/device/macos_native/: ioreport.rs
all-smi/src/device/readers/: mod.rs
all-smi/src/doctor/: bundle.rs
all-smi/src/doctor/checks/: platform.rs  windows.rs
all-smi/src/metrics/: energy_wal.rs
all-smi/src/mock/: generator.rs  server.rs  template_engine.rs
all-smi/src/mock/templates/: apple_silicon.rs  mod.rs  nvidia.rs
all-smi/src/network/: metrics_parser.rs
all-smi/src/record/: mod.rs
all-smi/src/ui/: activity_panel.rs  dashboard.rs  gpu_sparkline_panel.rs  help.rs  layout.rs  local_header.rs  mod.rs  remote_sparkline_panel.rs  tabs.rs  widgets.rs
all-smi/src/ui/filter_dsl/: eval.rs
all-smi/src/ui/renderers/: cpu_renderer.rs  gpu_renderer.rs  memory_renderer.rs
all-smi/src/ui/topology/: graph_render.rs
all-smi/src/view/: event_handler.rs  terminal_manager.rs  ui_events.rs  ui_loop.rs  view_cache.rs
all-smi/tests/: config_file_integration_test.rs  snapshot_test.rs
config/: commands.json  commands_old.json  config.json  greeting_prompt.md  proactive_prompt.md  system_prompt.md  system_prompt.txt
engine/: Cargo.toml
engine/python/: stt_service.py  tts_service.py
engine/src/: config.rs  lib.rs  main.rs  monitor.rs  proactive.rs  state.rs
engine/src/actions/: datetime.rs  media.rs  mod.rs  obsidian.rs  system.rs
engine/src/audio/: aec.rs  capture.rs  devices.rs  enrollment.rs  mod.rs  onboarding.rs  output.rs  tts.rs  utils.rs  voice.rs  wav_dump.rs
engine/src/audio/stt/: mod.rs  stt.rs  stt_service.rs  worker.rs
engine/src/commands/: mod.rs
engine/src/integrations/: mod.rs  obsidian.rs
engine/src/llm/: history.rs  mistral.rs  mod.rs
engine/src/llm/tools/: audio.rs  memory.rs  mod.rs  obsidian.rs  project.rs  screen.rs  time.rs
engine/src/memory/: mod.rs
engine/src/proactive/: idle_thoughts.rs  mod.rs
engine/src/ritual/: eligibility.rs  greeting.rs  mod.rs  theme.rs  utils.rs
engine/src/utils/: search.rs
engine/src/worker/: mod.rs  proactive.rs  speech.rs
gui/: package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: App.vue  main.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs
gui/src-tauri/src/commands/: window.rs
gui/src/assets/: globals.css
gui/src/components/: SpeechBlob.vue
python/: benchmark_names.py  stt_service.py  tts_service.py
src/: config.rs  main.rs
src/actions/: datetime.rs  mod.rs
src/audio/: capture.rs  devices.rs  mod.rs  output.rs  stt.rs  tts.rs  utils.rs
src/audio/stt/: mod.rs  stt_service.rs  whisper.rs
src/commands/: mod.rs
src/llm/: history.rs  mistral.rs  mod.rs
src/stt/: mod.rs  stt_service.rs  whisper.rs
