[package]
name = "voice-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version =  "4.6.0", features = ["derive"] }
cpal = "0.17.3"
ctrlc = "3.5.2"
hound = "3.5.1"
libc = "0.2.183"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.50.0"
toml = "1.0.7"
whisper-rs = "0.16.0"
