[package]
name = "voice-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
clap = { version =  "4.6.0", features = ["derive"] }
cpal = "0.17.3"
ctrlc = "3.5.2"
dotenv = "0.15.0"
enigo = "0.6.1"
hound = "3.5.1"
libc = "0.2.183"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
rodio = { version = "0.22.2", features = ["symphonia-mp3"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
toml = "1.0.7"
whisper-rs = "0.16.0"
