[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
chrono = "0.4.44"
clap = { version =  "4.6.0", features = ["derive"] }
cpal = "0.17.3"
ctrlc = "3.5.2"
dotenv = "0.15.0"
enigo = "0.6.1"
hound = "3.5.1"
libc = "0.2.183"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
rodio = { version = "0.22.2", features = ["symphonia-mp3", "playback", "symphonia-wav"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full", "rt-multi-thread"] }
toml = "1.0.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
dotenvy = "0.15.7"
num-derive = "0.4.2"
num-traits = "0.2.19"
tokio-tungstenite = "0.29.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
sysinfo = "0.38.4"
walkdir = "2.5.0"
fuzzy-matcher = "0.3.7"
strsim = "0.11.1"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
tokenizers = { version = "0.23.1" }
ndarray = "0.17.2"
bincode = "1.3"
mel_spec = "0.3.4"
parking_lot = "0.12.5"
nix = { version = "0.31.3", features = ["signal"] }
all-smi = "0.20.1"
async-trait = "0.1.89"
base64 = "0.22.1"
screenshots = "0.8.10"
